# palimpsest-license

./: .editorconfig  .gitattributes  .gitignore  .nojekyll  0-AI-MANIFEST.a2ml  AGENTIC.scm  AI.djot  BLITZ-SUMMARY.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.adoc  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.adoc  META.scm  NEUROSYM.adoc  NEUROSYM.scm  PALIMPSEST.adoc  PLAYBOOK.scm  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  README.nl.md  RELEASES.adoc  REPOSITORY_STRUCTURE.adoc  SECURITY.adoc  SECURITY.md  (+14 more)
.git-hooks/: pre-commit  pre-push
.githooks/: README.adoc  commit-msg  pre-commit  pre-push  prepare-commit-msg  validate-exhibit  validate-provenance  validate-spdx
.github/: FUNDING.yml  dependabot.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.migration/: RUBY_TO_RUST.md
.rvc/: config.yml  run.sh
.well-known/: security.txt
ARCHIVE/: INDEX.adoc  Palimpsest License v0.3.docx  README.adoc  contributor-guidelines-v0.3.md
GUIDES_v0.4/: INDEX.adoc  README.adoc  Red_Flag_Index.md  User_Guide.md
LICENSES/: INDEX.adoc  PMPL-1.0.json  README.adoc
LICENSE_CORE/: INDEX.adoc  README.adoc
OUTREACH/: INDEX.adoc  README.adoc
PRESENTATION/: INDEX.adoc  README.adoc
PROJECT_MANAGEMENT/: DOCUMENT_AUDIT_2025-12-09.adoc  DOCUMENT_REVIEW_SYSTEM.md  INDEX.adoc  MASTER_ROADMAP.md  README.adoc  RECONCILIATION_AUDIT.md
RESEARCH/: INDEX.adoc  README.adoc  STATE.scm
TOOLKIT_v0.4/: INDEX.adoc  README.adoc
TOOLS/: INDEX.adoc  README.adoc
academic/: INDEX.adoc  README.adoc
assets/: README.md
bof-meetings/: README.md  follow-up-action-plan.md
campaigns/: INDEX.adoc  README.adoc
config/: INDEX.adoc  README.adoc  config.ncl  infra.ncl
contractiles/: Justfile  README.adoc
docs/: BIMI-implementation.md  CITATIONS.adoc  ECOSYSTEM-ASCII-DIAGRAM  ECOSYSTEM-DIAGRAM.adoc  ECOSYSTEM-MAP.adoc  EDNS-OPT-records.md  EXPLAINME_ROOT.md  FAQ.md  GUIDE.md  INTEGRATION.md  PALIMPSEST-FAMILY-LICENSES.adoc  Palimpsest-v03.md  README.adoc  SPDX_COMPLIANCE.adoc  _sidebar.adoc  aibdp-manifest-guidance.md  aibdp-manifest-guidance.nl.md  bilingual-map.md  changelog.md  conflict-resolution-procedures.md  cross-link-audit-procedure.adoc  ethics-FAQ.md  ethics.md  index.adoc  index.html  index.md  international-adoption-guide.md  journey-map.adoc  jurisdiction-comparison-matrix.md  jurisdiction-comparison.md  onboarding.adoc  provenance-flow-diagram.adoc  style-guide.adoc  tooling.adoc  validation-tools.md
embed/: README.md
examples/: INDEX.adoc  README.adoc  examples.readme.md
formats/: INDEX.adoc  README.adoc  explainme-accessible.md
governance/: CONTRIBUTOR_ONBOARDING.adoc  INDEX.adoc  README.adoc
integrations/: README.md
legal/: FAQ.adoc  MIGRATION.adoc  MPL-2.0.txt  PALIMPSEST-AGPL-1.0.txt  README.adoc  architecture.adoc  index.adoc  one-pager.adoc
tools/pmpl-audit/: Cargo.toml
tools/pmpl-audit/src/: main.rs
tools/pmpl-sign/: Cargo.toml
tools/pmpl-sign/src/: main.rs
tools/pmpl-verify/: Cargo.toml
tools/pmpl-verify/src/: main.rs
v1.0/examples/python/: example.py  pyproject.toml
v1.0/examples/rust/: Cargo.toml  main.rs
(+382 files in other folders)
