# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Palimpsest Stewardship Council

[package]
name = "pmpl-audit"
version = "0.1.0"
edition = "2021"
description = "Audit repository for PMPL license compliance"
license = "PMPL-1.0"
repository = "https://github.com/hyperpolymath/palimpsest-license"
keywords = ["license", "audit", "compliance", "spdx"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "pmpl-audit"
path = "src/main.rs"
