# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Palimpsest Stewardship Council

[project]
name = "pmpl-python-example"
version = "1.0.0"
description = "Example Python project using PMPL-1.0"
license = {text = "PMPL-1.0-or-later"}
requires-python = ">=3.8"
keywords = ["pmpl", "license", "example"]

[project.urls]
Homepage = "https://github.com/hyperpolymath/palimpsest-license"
Repository = "https://github.com/hyperpolymath/palimpsest-license"

[tool.pmpl]
exhibits = ["ethical-use", "quantum-safe"]
provenance-enabled = false
